some api changes
