# controllers/User.js
@@ -10,8 +10,16 @@ module.exports.deleteUserUidAuctionAid = function deleteUserUidAuctionAid (req, 
   User.deleteUserUidAuctionAid(req.swagger.params, res, next);
 };
 
+module.exports.deleteUserUidAuctionAidItemIid = function deleteUserUidAuctionAidItemIid (req, res, next) {
+  User.deleteUserUidAuctionAidItemIid(req.swagger.params, res, next);
+};
+
 module.exports.deleteUserUidAuctionAidPlanPid = function deleteUserUidAuctionAidPlanPid (req, res, next) {
   User.deleteUserUidAuctionAidPlanPid(req.swagger.params, res, next);
+};
+
+module.exports.deleteUserUidAuctionAidPledgePid = function deleteUserUidAuctionAidPledgePid (req, res, next) {
+  User.deleteUserUidAuctionAidPledgePid(req.swagger.params, res, next);
 };
 
 module.exports.deleteUserUidCartCidOrderOidItemIid = function deleteUserUidCartCidOrderOidItemIid (req, res, next) {
@@ -22,12 +30,28 @@ module.exports.deleteUserUidPaymentPid = function deleteUserUidPaymentPid (req, 
   User.deleteUserUidPaymentPid(req.swagger.params, res, next);
 };
 
+module.exports.getUserUidAuctionAidItem = function getUserUidAuctionAidItem (req, res, next) {
+  User.getUserUidAuctionAidItem(req.swagger.params, res, next);
+};
+
+module.exports.getUserUidAuctionAidItemIid = function getUserUidAuctionAidItemIid (req, res, next) {
+  User.getUserUidAuctionAidItemIid(req.swagger.params, res, next);
+};
+
 module.exports.getUserUidAuctionAidPlan = function getUserUidAuctionAidPlan (req, res, next) {
   User.getUserUidAuctionAidPlan(req.swagger.params, res, next);
 };
 
 module.exports.getUserUidAuctionAidPlanPid = function getUserUidAuctionAidPlanPid (req, res, next) {
   User.getUserUidAuctionAidPlanPid(req.swagger.params, res, next);
+};
+
+module.exports.getUserUidAuctionAidPledgePid = function getUserUidAuctionAidPledgePid (req, res, next) {
+  User.getUserUidAuctionAidPledgePid(req.swagger.params, res, next);
+};
+
+module.exports.getUserUidAuctionUidPledge = function getUserUidAuctionUidPledge (req, res, next) {
+  User.getUserUidAuctionUidPledge(req.swagger.params, res, next);
 };
 
 module.exports.getUserUidAuctionsRegistered = function getUserUidAuctionsRegistered (req, res, next) {
@@ -46,12 +70,28 @@ module.exports.getUserUidProfile = function getUserUidProfile (req, res, next) {
   User.getUserUidProfile(req.swagger.params, res, next);
 };
 
+module.exports.getUserUidRetailerInfo = function getUserUidRetailerInfo (req, res, next) {
+  User.getUserUidRetailerInfo(req.swagger.params, res, next);
+};
+
+module.exports.getUserUidRetailerRidInfo = function getUserUidRetailerRidInfo (req, res, next) {
+  User.getUserUidRetailerRidInfo(req.swagger.params, res, next);
+};
+
 module.exports.patchUserUidAuctionAid = function patchUserUidAuctionAid (req, res, next) {
   User.patchUserUidAuctionAid(req.swagger.params, res, next);
 };
 
+module.exports.patchUserUidAuctionAidItemIid = function patchUserUidAuctionAidItemIid (req, res, next) {
+  User.patchUserUidAuctionAidItemIid(req.swagger.params, res, next);
+};
+
 module.exports.patchUserUidAuctionAidPlanPid = function patchUserUidAuctionAidPlanPid (req, res, next) {
   User.patchUserUidAuctionAidPlanPid(req.swagger.params, res, next);
+};
+
+module.exports.patchUserUidAuctionAidPledgePid = function patchUserUidAuctionAidPledgePid (req, res, next) {
+  User.patchUserUidAuctionAidPledgePid(req.swagger.params, res, next);
 };
 
 module.exports.patchUserUidCartCidOrderOidItemIid = function patchUserUidCartCidOrderOidItemIid (req, res, next) {
@@ -66,6 +106,10 @@ module.exports.patchUserUidProfile = function patchUserUidProfile (req, res, nex
   User.patchUserUidProfile(req.swagger.params, res, next);
 };
 
+module.exports.patchUserUidRetailerRidInfo = function patchUserUidRetailerRidInfo (req, res, next) {
+  User.patchUserUidRetailerRidInfo(req.swagger.params, res, next);
+};
+
 module.exports.postUserLogin = function postUserLogin (req, res, next) {
   User.postUserLogin(req.swagger.params, res, next);
 };
@@ -78,12 +122,20 @@ module.exports.postUserUidAuction = function postUserUidAuction (req, res, next)
   User.postUserUidAuction(req.swagger.params, res, next);
 };
 
+module.exports.postUserUidAuctionAidItem = function postUserUidAuctionAidItem (req, res, next) {
+  User.postUserUidAuctionAidItem(req.swagger.params, res, next);
+};
+
 module.exports.postUserUidAuctionAidPlan = function postUserUidAuctionAidPlan (req, res, next) {
   User.postUserUidAuctionAidPlan(req.swagger.params, res, next);
 };
 
 module.exports.postUserUidAuctionAidSave = function postUserUidAuctionAidSave (req, res, next) {
   User.postUserUidAuctionAidSave(req.swagger.params, res, next);
+};
+
+module.exports.postUserUidAuctionUidPledge = function postUserUidAuctionUidPledge (req, res, next) {
+  User.postUserUidAuctionUidPledge(req.swagger.params, res, next);
 };
 
 module.exports.postUserUidCartItem = function postUserUidCartItem (req, res, next) {
@@ -104,4 +156,8 @@ module.exports.postUserUidProductPidComment = function postUserUidProductPidComm
 
 module.exports.postUserUidProductPidSave = function postUserUidProductPidSave (req, res, next) {
   User.postUserUidProductPidSave(req.swagger.params, res, next);
+};
+
+module.exports.postUserUidRetailerInfo = function postUserUidRetailerInfo (req, res, next) {
+  User.postUserUidRetailerInfo(req.swagger.params, res, next);
 };
