# json/swagger2.json
@@ -17,6 +17,9 @@
   }, {
     "name" : "admin"
   } ],
+  "security" : [ {
+    "Bearer" : [ ]
+  } ],
   "paths" : {
     "/admin" : {
       "post" : {
@@ -29,7 +32,7 @@
           "200" : {
             "description" : "Status 200",
             "schema" : {
-              "$ref" : "#/definitions/anonymousRepresentation102"
+              "$ref" : "#/definitions/anonymousRepresentation124"
             }
           }
         }
@@ -255,7 +258,10 @@
               "$ref" : "#/definitions/anonymousRepresentation26"
             }
           }
-        }
+        },
+        "security" : [ {
+          "Bearer" : [ ]
+        } ]
       }
     },
     "/auction/{aid}/register" : {
@@ -399,7 +405,10 @@
           "200" : {
             "description" : "Status 200"
           }
-        }
+        },
+        "security" : [ {
+          "Bearer" : [ ]
+        } ]
       }
     },
     "/payment/methods" : {
@@ -1008,6 +1017,171 @@
         }
       }
     },
+    "/user/{uid}/auction/{aid}/item" : {
+      "get" : {
+        "tags" : [ "user" ],
+        "operationId" : "getUserUidAuctionAidItem",
+        "parameters" : [ {
+          "name" : "uid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "name" : "aid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Status 200"
+          }
+        }
+      },
+      "post" : {
+        "tags" : [ "user" ],
+        "operationId" : "postUserUidAuctionAidItem",
+        "consumes" : [ "application/json" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "uid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "name" : "aid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/anonymousRepresentation111"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Status 200",
+            "schema" : {
+              "$ref" : "#/definitions/anonymousRepresentation112"
+            }
+          },
+          "400" : {
+            "description" : "Status 400",
+            "schema" : {
+              "$ref" : "#/definitions/anonymousRepresentation113"
+            }
+          }
+        }
+      }
+    },
+    "/user/{uid}/auction/{aid}/item/{iid}" : {
+      "get" : {
+        "tags" : [ "user" ],
+        "operationId" : "getUserUidAuctionAidItemIid",
+        "parameters" : [ {
+          "name" : "uid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "name" : "aid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "name" : "iid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Status 200"
+          }
+        }
+      },
+      "delete" : {
+        "tags" : [ "user" ],
+        "operationId" : "deleteUserUidAuctionAidItemIid",
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "uid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "name" : "aid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "name" : "iid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Status 200",
+            "schema" : {
+              "$ref" : "#/definitions/anonymousRepresentation122"
+            }
+          },
+          "400" : {
+            "description" : "Status 400",
+            "schema" : {
+              "$ref" : "#/definitions/anonymousRepresentation123"
+            }
+          }
+        }
+      },
+      "patch" : {
+        "tags" : [ "user" ],
+        "operationId" : "patchUserUidAuctionAidItemIid",
+        "consumes" : [ "application/json" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "uid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "name" : "aid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "name" : "iid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/anonymousRepresentation119"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Status 200",
+            "schema" : {
+              "$ref" : "#/definitions/anonymousRepresentation120"
+            }
+          },
+          "400" : {
+            "description" : "Status 400",
+            "schema" : {
+              "$ref" : "#/definitions/anonymousRepresentation121"
+            }
+          }
+        }
+      }
+    },
     "/user/{uid}/auction/{aid}/plan" : {
       "get" : {
         "tags" : [ "user" ],
@@ -1181,6 +1355,111 @@
         }
       }
     },
+    "/user/{uid}/auction/{aid}/pledge/{pid}" : {
+      "get" : {
+        "tags" : [ "user" ],
+        "operationId" : "getUserUidAuctionAidPledgePid",
+        "parameters" : [ {
+          "name" : "uid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "name" : "aid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "name" : "pid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Status 200"
+          }
+        }
+      },
+      "delete" : {
+        "tags" : [ "user" ],
+        "operationId" : "deleteUserUidAuctionAidPledgePid",
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "uid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "name" : "aid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "name" : "pid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Status 200",
+            "schema" : {
+              "$ref" : "#/definitions/anonymousRepresentation114"
+            }
+          },
+          "400" : {
+            "description" : "Status 400",
+            "schema" : {
+              "$ref" : "#/definitions/anonymousRepresentation115"
+            }
+          }
+        }
+      },
+      "patch" : {
+        "tags" : [ "user" ],
+        "operationId" : "patchUserUidAuctionAidPledgePid",
+        "consumes" : [ "application/json" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "uid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "name" : "aid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "name" : "pid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/anonymousRepresentation116"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Status 200",
+            "schema" : {
+              "$ref" : "#/definitions/anonymousRepresentation117"
+            }
+          },
+          "400" : {
+            "description" : "Status 400",
+            "schema" : {
+              "$ref" : "#/definitions/anonymousRepresentation118"
+            }
+          }
+        }
+      }
+    },
     "/user/{uid}/auction/{aid}/save" : {
       "post" : {
         "tags" : [ "user" ],
@@ -1210,6 +1489,56 @@
             "description" : "Status 200",
             "schema" : {
               "$ref" : "#/definitions/anonymousRepresentation81"
+            }
+          }
+        }
+      }
+    },
+    "/user/{uid}/auction/{uid}/pledge" : {
+      "get" : {
+        "tags" : [ "user" ],
+        "operationId" : "getUserUidAuctionUidPledge",
+        "parameters" : [ {
+          "name" : "uid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Status 200"
+          }
+        }
+      },
+      "post" : {
+        "tags" : [ "user" ],
+        "operationId" : "postUserUidAuctionUidPledge",
+        "consumes" : [ "application/json" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "uid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/anonymousRepresentation108"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Status 200",
+            "schema" : {
+              "$ref" : "#/definitions/anonymousRepresentation109"
+            }
+          },
+          "400" : {
+            "description" : "Status 400",
+            "schema" : {
+              "$ref" : "#/definitions/anonymousRepresentation110"
             }
           }
         }
@@ -1268,7 +1597,10 @@
               "$ref" : "#/definitions/anonymousRepresentation72"
             }
           }
-        }
+        },
+        "security" : [ {
+          "Bearer" : [ ]
+        } ]
       }
     },
     "/user/{uid}/cart/{cid}/order/{oid}/item/{iid}" : {
@@ -1310,7 +1642,10 @@
               "$ref" : "#/definitions/anonymousRepresentation74"
             }
           }
-        }
+        },
+        "security" : [ {
+          "Bearer" : [ ]
+        } ]
       },
       "patch" : {
         "tags" : [ "user" ],
@@ -1358,7 +1693,10 @@
               "$ref" : "#/definitions/anonymousRepresentation77"
             }
           }
-        }
+        },
+        "security" : [ {
+          "Bearer" : [ ]
+        } ]
       }
     },
     "/user/{uid}/contactus" : {
@@ -1671,6 +2009,123 @@
           }
         }
       }
+    },
+    "/user/{uid}/retailer/info" : {
+      "get" : {
+        "tags" : [ "user" ],
+        "operationId" : "getUserUidRetailerInfo",
+        "parameters" : [ {
+          "name" : "uid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Status 200"
+          }
+        }
+      },
+      "post" : {
+        "tags" : [ "user" ],
+        "operationId" : "postUserUidRetailerInfo",
+        "consumes" : [ "application/json" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "uid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/anonymousRepresentation102"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Status 200",
+            "schema" : {
+              "$ref" : "#/definitions/anonymousRepresentation103"
+            }
+          },
+          "406" : {
+            "description" : "Status 406",
+            "schema" : {
+              "$ref" : "#/definitions/anonymousRepresentation104"
+            }
+          }
+        }
+      }
+    },
+    "/user/{uid}/retailer/{rid}/info" : {
+      "get" : {
+        "tags" : [ "user" ],
+        "operationId" : "getUserUidRetailerRidInfo",
+        "parameters" : [ {
+          "name" : "uid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "name" : "rid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Status 200"
+          }
+        }
+      },
+      "patch" : {
+        "tags" : [ "user" ],
+        "operationId" : "patchUserUidRetailerRidInfo",
+        "consumes" : [ "application/json" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "uid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "name" : "rid",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/anonymousRepresentation105"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Status 200",
+            "schema" : {
+              "$ref" : "#/definitions/anonymousRepresentation106"
+            }
+          },
+          "406" : {
+            "description" : "Status 406",
+            "schema" : {
+              "$ref" : "#/definitions/anonymousRepresentation107"
+            }
+          }
+        }
+      }
+    }
+  },
+  "securityDefinitions" : {
+    "Bearer" : {
+      "type" : "apiKey",
+      "name" : "Authorization",
+      "in" : "header"
     }
   },
   "definitions" : {
@@ -1978,6 +2433,72 @@
       "type" : "object"
     },
     "anonymousRepresentation102" : {
+      "type" : "object"
+    },
+    "anonymousRepresentation103" : {
+      "type" : "object"
+    },
+    "anonymousRepresentation104" : {
+      "type" : "object"
+    },
+    "anonymousRepresentation105" : {
+      "type" : "object"
+    },
+    "anonymousRepresentation106" : {
+      "type" : "object"
+    },
+    "anonymousRepresentation107" : {
+      "type" : "object"
+    },
+    "anonymousRepresentation108" : {
+      "type" : "object"
+    },
+    "anonymousRepresentation109" : {
+      "type" : "object"
+    },
+    "anonymousRepresentation110" : {
+      "type" : "object"
+    },
+    "anonymousRepresentation111" : {
+      "type" : "object"
+    },
+    "anonymousRepresentation112" : {
+      "type" : "object"
+    },
+    "anonymousRepresentation113" : {
+      "type" : "object"
+    },
+    "anonymousRepresentation114" : {
+      "type" : "object"
+    },
+    "anonymousRepresentation115" : {
+      "type" : "object"
+    },
+    "anonymousRepresentation116" : {
+      "type" : "object"
+    },
+    "anonymousRepresentation117" : {
+      "type" : "object"
+    },
+    "anonymousRepresentation118" : {
+      "type" : "object"
+    },
+    "anonymousRepresentation119" : {
+      "type" : "object"
+    },
+    "anonymousRepresentation120" : {
+      "type" : "object"
+    },
+    "anonymousRepresentation121" : {
+      "type" : "object"
+    },
+    "anonymousRepresentation122" : {
+      "type" : "object"
+    },
+    "anonymousRepresentation123" : {
+      "type" : "object"
+    },
+    "anonymousRepresentation124" : {
       "type" : "object"
     }
   }
